#6 ee10 branch frissitese a friss helper fejlesztesekkel